implementação do !anota

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "axios": "^0.21.1",
     "gtts": "^0.2.1",
     "sound-play": "^1.1.0",
+    "sqlite3": "^5.0.2",
     "tmi.js": "^1.8.5"
   }
 }
